--- a/app/views/todo_items/new.html.erb
+++ b/app/views/todo_items/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', todo_item: @todo_item %>
 
-<%= link_to 'Back', todo_list_path(2) %>
+<%= link_to 'Back', todo_list_path(@todo_list) %>
