--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -21,4 +21,4 @@
 </p>
 
 <%= link_to 'Edit', edit_account_path(session[:user_id]) %> |
-<%= link_to 'Back', account_path %>
+<%= link_to 'Back', todo_lists_path %>
