--- a/app/views/todo_items/edit.html.erb
+++ b/app/views/todo_items/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', todo_item: @todo_item %>
 
-<%= link_to 'Show', @todo_item %> |
-<%= link_to 'Back', todo_items_path %>
+<%= link_to 'Show', todo_list_todo_item_path(@todo_list, @todo_item) %> |
+<%= link_to 'Back', todo_lists_path %>
